[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://interface/start/forgot_password.gd" id="1_kar5f"]
[ext_resource type="Theme" uid="uid://ff8ufmacq6dq" path="res://interface/theme/default.tres" id="2_gu1tm"]
[ext_resource type="Texture2D" uid="uid://lk8f5upfp7go" path="res://interface/theme/textures/window_h.png" id="3_galjd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_02yfj"]
texture = ExtResource("3_galjd")
texture_margin_left = 23.0
texture_margin_top = 31.0
texture_margin_right = 23.0
texture_margin_bottom = 31.0

[node name="ForgotPassword" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kar5f")

[node name="Window" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.5
offset_top = -111.0
offset_right = 220.5
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gu1tm")
theme_override_styles/panel = SubResource("StyleBoxTexture_02yfj")

[node name="MarginContainer" type="MarginContainer" parent="Window"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
layout_mode = 2

[node name="WelcomeLabel" type="Label" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Forgot Password"
horizontal_alignment = 1

[node name="EmailLabel" type="Label" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Email"

[node name="Email" type="LineEdit" parent="Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackToLoginButton" type="Button" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back to Login"

[node name="ResetPasswordButton" type="Button" parent="Window/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Reset Password"

[connection signal="text_changed" from="Window/MarginContainer/VBoxContainer/Email" to="." method="_on_email_edit_text_changed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/HBoxContainer/BackToLoginButton" to="." method="_on_back_to_login_button_pressed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/HBoxContainer/ResetPasswordButton" to="." method="_on_reset_password_button_pressed"]
